@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.seren" version="1.6.1" name="Seren" provider-name="Nixgates">
+<addon id="plugin.video.seren" version="1.6.2" name="Seren" provider-name="Nixgates">
 	<requires>
 		<import addon="xbmc.python" version="2.25.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -45,6 +45,9 @@
 			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
 		<news>
+Changelog 1.6.2:
+Fixed trakt database rebuild issues
+
 Changelog 1.6.1:
 Fix playback for RD items in My Files
 Fix Trakt Sync Databsae not upgrading correctly
